# Unitcare

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
JSON/: JSON1.json  JSON10.json  JSON2.json  JSON3.json  JSON4.json  JSON5.json  JSON6.json  JSON7.json  JSON8.json  JSON9.json
Task1/: README.md  main.py  models.py  pyproject.toml  services.py
Task1/sample_audio/: sample.txt
Task1/templates/: index.html
Task2/: README.md  REAMME.md  app.py  main.py  pdf_parser.py  processor.py  pyproject.toml  requirements.txt
